# uavsim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  GROK.md  LICENSE  README.md  ROADMAP.md  SPEC.md  app.js  pyproject.toml
.github/workflows/: ci.yml  pages-showcase.yml
configs/missions/: aggressive_square.yaml  figure_eight.yaml  figure_eight_aggressive.yaml  figure_eight_auto_yaw.yaml  figure_eight_envelope_edge.yaml  gentle_square.yaml  hover_hold.yaml
configs/studies/: aggressive_square.yaml  compare_lqr_vs_pid.yaml  edge_ahrs_kf_pid.yaml  edge_ahrs_lqg.yaml  edge_figure_eight.yaml  edge_figure_eight_pid.yaml  edge_flow_alt_kf_pid.yaml  edge_flow_alt_lqg.yaml  edge_gps_imu_kf_pid.yaml  edge_gps_imu_lqg.yaml  edge_gps_imu_lqg_mc.yaml  edge_gps_imu_naive.yaml  edge_gps_imu_naive_pid.yaml  edge_imu_only_kf_pid.yaml  edge_imu_only_lqg.yaml  figure_eight.yaml  figure_eight_aero.yaml  figure_eight_aggressive.yaml  figure_eight_ahrs_kf_pid.yaml  figure_eight_ahrs_lqg.yaml  figure_eight_flow_alt_kf_pid.yaml  figure_eight_flow_alt_lqg.yaml  figure_eight_gps_imu_kf_pid.yaml  figure_eight_gps_imu_lqg.yaml  figure_eight_gps_imu_lqg_mc.yaml  figure_eight_gps_imu_naive.yaml  figure_eight_gps_imu_naive_pid.yaml  figure_eight_imu_only_kf_pid.yaml  figure_eight_imu_only_lqg.yaml  figure_eight_lqg.yaml  figure_eight_mc.yaml  figure_eight_mekf.yaml  figure_eight_motors.yaml  figure_eight_motors_mc.yaml  figure_eight_pid.yaml  (+11 more)
containers/: Dockerfile  docker-compose.yml
data/: BUILD_SHA  meta.json
docs/: ARCHITECTURE.md  LIMITATIONS.md  containers.md  viz.md
(+131 files in other folders)
