[project]
name = "uavsim"
version = "0.1.0"
description = "Quadrotor simulation and GNC analysis framework (SIL-first, HIL-ready seams)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Trey Copeland" }]
keywords = ["quadrotor", "uav", "gnc", "simulation", "lqr", "monte-carlo"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
uavsim = "uavsim.cli.main:main"

[project.urls]
# Remote origin TBD (SPEC open decision)
Repository = "https://github.com/example/quadrotor-sim"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uavsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]

[tool.ruff.format]
quote-style = "double"
